--- a/darkstar.ini
+++ b/darkstar.ini
@@ -11,8 +11,9 @@ EnableIdleSwitching=true
 # Input safeguards
 WinBlockKeys=true
 BlockNoGamingMonitor=true
-# CPU frequency locking to reduce EMI/RFI noise
-LockCPUFrequency=true
+# Core scrambling feature (periodically changes process affinity to different cores)
+EnableScramble=false
+ScrambleIntervalMs=2000
 # Thread rule re-application interval (ms)
 ThreadRuleReapplyInterval=30000
 # Physical cores reserved from auto affinity / ideal assignment
